src/objects/Room_Review__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Room Reviews</relationshipLabel>
        <relationshipName>Room_Reviews1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Room Reviews</relationshipLabel>
        <relationshipName>Room_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Review__c</fullName>
        <label>Review</label>
        <type>TextArea</type>
    </fields>
    <label>Room Review</label>
    <nameField>
        <label>Room Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Room Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>